unit 6/lesson 3/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:24:10 **** Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:35:25: error: expected ')' before numeric constant
 #define RCC_BASE 0x4002 1000
                         ^
../Src/main.c:36:44: note: in expansion of macro 'RCC_BASE'
 #define RCC_APB2ENR *(volatile uint32_t *)(RCC_BASE + 0x18)
                                            ^~~~~~~~
../Src/main.c:45:2: note: in expansion of macro 'RCC_APB2ENR'
  RCC_APB2ENR |= 1<<2;
  ^~~~~~~~~~~
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
21:24:23 **** Incremental Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "unit6_lesson3_lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\master online diploma\unit 6\lesson1_lab_2\unit6_lesson3_lab2\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="unit6_lesson3_lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: unit6_lesson3_lab2.elf
 
arm-none-eabi-size   unit6_lesson3_lab2.elf 
arm-none-eabi-objdump -h -S  unit6_lesson3_lab2.elf  > "unit6_lesson3_lab2.list"
arm-none-eabi-objcopy  -O binary  unit6_lesson3_lab2.elf  "unit6_lesson3_lab2.bin"
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	unit6_lesson3_lab2.elf
Finished building: default.size.stdout
 
Finished building: unit6_lesson3_lab2.bin
Finished building: unit6_lesson3_lab2.list
 
 
21:25:21 **** Incremental Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-size   unit6_lesson3_lab2.elf 
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	unit6_lesson3_lab2.elf
Finished building: default.size.stdout
 
21:46:25 **** Incremental Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "unit6_lesson3_lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\master online diploma\unit 6\lesson1_lab_2\unit6_lesson3_lab2\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="unit6_lesson3_lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: unit6_lesson3_lab2.elf
 
arm-none-eabi-objdump -h -S  unit6_lesson3_lab2.elf  > "unit6_lesson3_lab2.list"
arm-none-eabi-objcopy  -O binary  unit6_lesson3_lab2.elf  "unit6_lesson3_lab2.bin"
arm-none-eabi-size   unit6_lesson3_lab2.elf 
   text	   data	    bss	    dec	    hex	filename
    728	      8	   1568	   2304	    900	unit6_lesson3_lab2.elf
Finished building: default.size.stdout
 
Finished building: unit6_lesson3_lab2.list
Finished building: unit6_lesson3_lab2.bin
 
 
22:06:19 **** Incremental Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "unit6_lesson3_lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\master online diploma\unit 6\lesson1_lab_2\unit6_lesson3_lab2\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="unit6_lesson3_lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: unit6_lesson3_lab2.elf
 
arm-none-eabi-objdump -h -S  unit6_lesson3_lab2.elf  > "unit6_lesson3_lab2.list"
arm-none-eabi-objcopy  -O binary  unit6_lesson3_lab2.elf  "unit6_lesson3_lab2.bin"
arm-none-eabi-size   unit6_lesson3_lab2.elf 
   text	   data	    bss	    dec	    hex	filename
    740	      8	   1568	   2316	    90c	unit6_lesson3_lab2.elf
Finished building: default.size.stdout
 
Finished building: unit6_lesson3_lab2.bin
Finished building: unit6_lesson3_lab2.list
 
 
22:08:25 **** Incremental Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "unit6_lesson3_lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\master online diploma\unit 6\lesson1_lab_2\unit6_lesson3_lab2\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="unit6_lesson3_lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: unit6_lesson3_lab2.elf
 
arm-none-eabi-objdump -h -S  unit6_lesson3_lab2.elf  > "unit6_lesson3_lab2.list"
arm-none-eabi-objcopy  -O binary  unit6_lesson3_lab2.elf  "unit6_lesson3_lab2.bin"
arm-none-eabi-size   unit6_lesson3_lab2.elf 
   text	   data	    bss	    dec	    hex	filename
    740	      8	   1568	   2316	    90c	unit6_lesson3_lab2.elf
Finished building: default.size.stdout
 
Finished building: unit6_lesson3_lab2.bin
Finished building: unit6_lesson3_lab2.list
 
 
22:08:32 **** Incremental Build of configuration Debug for project unit6_lesson3_lab2 ****
make -j8 all 
arm-none-eabi-size   unit6_lesson3_lab2.elf 
   text	   data	    bss	    dec	    hex	filename
    740	      8	   1568	   2316	    90c	unit6_lesson3_lab2.elf
Finished building: default.size.stdout
 
